--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,50 +1,45 @@
 {
-  "name": "rarecamp-ui",
+  "name": "rarecamp",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "aws-amplify": "^3.0.8",
-    "aws-amplify-react": "^4.1.7",
-    "axios": "^0.19.2",
-    "clsx": "^1.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "serverless": "^1.72.0",
-    "typeface-roboto": "0.0.75"
-  },
   "scripts": {
-    "start-cloud-api": "react-scripts start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "package": "serverless package && zip -r ui.zip build .serverless serverless.yaml package.json package-lock.json",
-    "deploy": "sls deploy",
-    "deploy-package": "serverless deploy --package .serverless"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "format": "prettier-eslint --write $PWD/'**/*.[jt]s?(x)' --ignore '**/.next/**' && eslint --fix .",
+    "lint": "eslint . --ext=.ts,.tsx,.js,.jsx",
+    "test": "jest "
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@testing-library/dom": "^7.28.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "@types/next": "^9.0.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "next": "10.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@wizeline/serverless-amplify-plugin": "^1.2.1",
-    "serverless-dotenv-plugin": "^2.3.2"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^26.0.17",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.10.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "prettier-eslint-cli": "^5.0.0",
+    "typescript": "^4.1.2"
   }
 }
