--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,15 +11,19 @@
     "test": "jest "
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/next": "^9.0.0",
+    "antd": "^4.9.2",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.0",
+    "react-query": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
