--- a/serverless.yaml
+++ b/serverless.yaml
@@ -43,6 +43,15 @@ plugins:
 
 custom:
   stages:
+    personal:
+      # Uses default AWS Config profile in your environment
+      profile: ${{env:AWS_PROFILE}}
+      logRetentionInDays: 1
+      amplify:
+      api:
+        domainEnabled: false
+      alarms:
+        notificationEmail: ${{env:ALARMS_NOTIFICATION_EMAIL}}
     development:
       profile: rarecamp_dev
       logRetentionInDays: 1
@@ -92,7 +101,7 @@ custom:
     isManual: true
     domainName: ${{self:custom.stageConfig.amplify.domainName, ''}}
     buildSpecValues:
-      artifactBaseDirectory: packages/ui/build
+      artifactBaseDirectory: packages/ui/.next
       preBuildWorkingDirectory: packages/ui
     buildCommandEnvVars:
       prefix: 'REACT_APP_'
