trying to fix aws creds config file

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -36,10 +36,13 @@ jobs:
       run: |
         mkdir ~/.aws
         echo "[rarecamp_dev]
-        aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-        aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}" > ~/.aws/credentials
+        aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+        aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}" > ~/.aws/credentials
         # TODO: How to also get the PR origin repo if it's coming from an external contributor
         # See: env.GITHUB_REF, env.GITHUB_HEAD_REF, GITHUB_BASE_REF https://help.github.com/en/actions/configuring-and-managing-workflows/using-environment-variables
+
+        # Just testing the AWS Creds 
+        aws cloudformation list-stacks
         NODE_ENV=production ALARMS_NOTIFICATION_EMAIL=alert@example.com SERVERLESS_SERVICE_SUFFIX=-${{ github.head_ref }} npm run deploy:dev
         WEBSITE_URL=https://$(grep -o 'DefaultDomain": "[^"]*' ./stack-outputs.json | grep -o '[^"]*$')
         echo "::set-output name=websiteUrl::$WEBSITE_URL"
