--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [synchronize, opened, reopened]
 
+env:
+  AWS_REGION: us-west-2
+  WS_DEFAULT_REGION: us-west-2
+
 jobs:
   auto-approve-dependabot:
     if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
@@ -43,7 +47,7 @@ jobs:
 
         # Just testing the AWS Creds 
         aws cloudformation list-stacks
-        NODE_ENV=production ALARMS_NOTIFICATION_EMAIL=alert@example.com SERVERLESS_SERVICE_SUFFIX=-${{ github.head_ref }} npm run deploy:dev
+        AWS_PROFILE=rarecamp_dev NODE_ENV=production ALARMS_NOTIFICATION_EMAIL=alert@example.com SERVERLESS_SERVICE_SUFFIX=-${{ github.head_ref }} npm run deploy:dev
         WEBSITE_URL=https://$(grep -o 'DefaultDomain": "[^"]*' ./stack-outputs.json | grep -o '[^"]*$')
         echo "::set-output name=websiteUrl::$WEBSITE_URL"
     
