--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,7 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
+    "allowJs": false,
     "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
@@ -26,7 +26,9 @@
     "jest.config.js",
     "**/*.ts",
     "**/*.tsx",
-    "jest.config.js"
+    "jest.config.js",
+    "tailwind.config.js",
+    "postcss.config.js"
   ],
   "exclude": [
     "node_modules"
