--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "start:ui": "cd packages/ui && npm start",
     "start:ui:offline": "REACT_APP_ApiEndpoint=http://localhost:4911 npm run start:ui",
     "start:api": "sls offline cloudside",
-
     "package:dev": "sls package --stage development",
     "deploy-prepack:dev": "sls deploy --package .serverless --stage development",
     "deploy:dev": "sls deploy --stage development",
-
     "package:staging": "NODE_ENV=production sls package --stage staging",
     "deploy-prepack:staging": "NODE_ENV=production sls deploy --package .serverless --stage staging",
     "deploy:staging": "NODE_ENV=production sls deploy --stage staging",
-
     "package:prod": "NODE_ENV=production sls package --stage production",
     "deploy-prepack:prod": "NODE_ENV=production sls deploy --package .serverless --stage production",
     "deploy:prod": "NODE_ENV=production sls deploy --stage production",
-
     "remove-stack:dev": "sls remove --stage development",
     "zip-release": "zip -r release.zip .serverless serverless.yaml package.json package-lock.json",
     "setup": "node scripts/setup/setup.js",
@@ -48,9 +44,11 @@
     "semantic-release": "^17.3.0",
     "serverless": "^1.70.0",
     "serverless-apigateway-service-proxy": "^1.7.0",
+    "serverless-appsync-simulator": "^0.11.0",
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-domain-manager": "^3.3.2",
     "serverless-dotenv-plugin": "^2.4.2",
+    "serverless-dynamodb-local": "^0.2.39",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-offline": "^6.1.5",
     "serverless-plugin-aws-alerts": "^1.4.0",
@@ -69,6 +67,7 @@
     "cors": "^2.8.5",
     "dynamodb-toolbox": "^0.3.0",
     "express": "^4.17.1",
-    "replace-in-file": "^6.0.0"
+    "replace-in-file": "^6.0.0",
+    "serverless-appsync-plugin": "^1.5.0"
   }
 }
