--- a/templates/graphql.yml
+++ b/templates/graphql.yml
@@ -16,6 +16,12 @@ mappingTemplates:
   - type: Query
     field: listOrganizations
     dataSource: organizations
+  - type: Query
+    field: getDisease
+    dataSource: getDisease
+    # use direct Lambda
+    request: false
+    response: false
   
   
   # Mutations
@@ -41,3 +47,8 @@ dataSources:
     config:
       tableName:
         Ref: DiseasesTable
+
+  - type: AWS_LAMBDA
+    name: getDisease
+    config:
+      functionName: getDisease
