--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "format": "prettier-eslint --write $PWD/'**/*.[jt]s?(x)' --ignore '**/.next/**' && eslint --fix .",
-    "lint": "eslint . --ext=.ts,.tsx,.js,.jsx",
+    "lint": "eslint . --ext=.ts,.tsx",
     "test": "jest "
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
@@ -40,7 +42,9 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.10.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "msw": "^0.24.4",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.0",
     "typescript": "^4.1.2"
