--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -28,9 +28,12 @@
     "**/*.tsx",
     "jest.config.js",
     "tailwind.config.js",
-    "postcss.config.js"
+    "postcss.config.js",
+    "styleMock.js"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "out",
+    ".next"
   ]
 }
