feat: Add workspace, signup, signin pages (#16)
* feat(Dashboard page): Dashboard page with hardcoded data

- Include antdesign
- Add basic dashboar design

* feat (Add tailwind): Replace antd package & redesign home page

* feat: Add Auth(signin, signup, forgot password) and workspace pages

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,7 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
+    "allowJs": false,
     "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
@@ -26,9 +26,14 @@
     "jest.config.js",
     "**/*.ts",
     "**/*.tsx",
-    "jest.config.js"
+    "jest.config.js",
+    "tailwind.config.js",
+    "postcss.config.js",
+    "styleMock.js"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "out",
+    ".next"
   ]
 }
