--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "format": "prettier-eslint --write $PWD/'**/*.[jt]s?(x)' --ignore '**/.next/**' && eslint --fix .",
-    "lint": "eslint . --ext=.ts,.tsx,.js,.jsx",
+    "lint": "eslint . --ext=.ts,.tsx",
     "test": "jest "
   },
   "dependencies": {
@@ -16,10 +17,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/next": "^9.0.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "autoprefixer": "^10.1.0",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.1",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -30,6 +34,7 @@
     "@typescript-eslint/parser": "^4.9.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.15.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -37,7 +42,9 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.10.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "msw": "^0.24.4",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.0",
     "typescript": "^4.1.2"
