--- a/templates/graphql.yml
+++ b/templates/graphql.yml
@@ -1,10 +1,12 @@
 name: rarecamp-${file(serverless.yml):provider.stage}
 authenticationType: AMAZON_COGNITO_USER_POOLS
 schema:
-  - graphql/schema/schema.graphql
-  - graphql/schema/organization.graphql
-  - graphql/schema/user.graphql
-  - graphql/schema/disease.graphql
+  - packages/graphql/schemas/schema.graphql
+  - packages/graphql/schemas/organization.graphql
+  - packages/graphql/schemas/user.graphql
+  - packages/graphql/schemas/disease.graphql
+
+mappingTemplatesLocation: packages/graphql/mapping-templates
 
 userPoolConfig:
   defaultAction: DENY
