--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "semantic-release": "^17.3.0",
     "serverless": "^2.18.0",
     "serverless-apigateway-service-proxy": "^1.7.0",
+    "serverless-appsync-simulator": "^0.11.0",
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-domain-manager": "^3.3.2",
     "serverless-dotenv-plugin": "^2.4.2",
+    "serverless-dynamodb-local": "^0.2.39",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-offline": "^6.1.5",
     "serverless-plugin-aws-alerts": "^1.4.0",
@@ -65,6 +67,7 @@
     "cors": "^2.8.5",
     "dynamodb-toolbox": "^0.3.0",
     "express": "^4.17.1",
-    "replace-in-file": "^6.0.0"
+    "replace-in-file": "^6.0.0",
+    "serverless-appsync-plugin": "^1.6.0"
   }
 }
