--- a/serverless.yaml
+++ b/serverless.yaml
@@ -3,7 +3,7 @@ provider:
   name: aws
   stackName: ${{self:service}}-${{self:provider.stage}}
   runtime: nodejs12.x
-  memorySize: 1024
+  memorySize: 512
   timeout: 6
   logRetentionInDays: ${{self:custom.stages.${{self:provider.stage}}.logRetentionInDays}}
   stage: ${{opt:stage, env:NODE_ENV, 'development'}}
@@ -31,6 +31,7 @@ plugins:
   - serverless-plugin-tracing
   - serverless-iam-roles-per-function
   - serverless-webpack
+  - serverless-appsync-plugin
   # - serverless-apigateway-service-proxy
   # - serverless-plugin-split-stacks
   - serverless-stack-output
@@ -38,7 +39,9 @@ plugins:
   - serverless-plugin-aws-alerts
   # - '../serverless-amplify-plugin'
   - '@wizeline/serverless-amplify-plugin'
+  - serverless-dynamodb-local
   - serverless-offline
+  - serverless-appsync-simulator
   - serverless-stack-termination-protection
 
 custom:
@@ -128,218 +131,16 @@ custom:
     stages:
       - staging
       - production
+  dynamodb:
+    stages:
+      - development
+    start:
+      dbPath: '.dynamodb'
+      migrate: false
+  appSync: ${{file(templates/graphql.yml)}}
 
-functions:
-  express:
-    handler: packages/api/functions/express/lambda.handler
-    events:
-      - http:
-          method: ANY
-          path: /
-          cors: true
-          authorizer:
-            type: COGNITO_USER_POOLS
-            authorizerId: !Ref ApiGatewayAuthorizer
-            # name: CognitoAuthorizer
-            # type: COGNITO_USER_POOLS
-            # arn: !GetAtt CognitoUserPool.Arn
-      - http:
-          method: ANY
-          path: '{proxy+}'
-          cors: true
-          authorizer:
-            type: COGNITO_USER_POOLS
-            authorizerId: !Ref ApiGatewayAuthorizer
-            # NOTE: Instead of creating an Authorizer ourselves, we could use the below when this is fixed
-            # https://github.com/serverless/serverless/issues/3212#issuecomment-450574093
-            # name: CognitoAuthorizer
-            # type: COGNITO_USER_POOLS
-            # arn: !GetAtt CognitoUserPool.Arn
-    iamRoleStatements:
-      - Effect: "Allow"
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
-        Resource:
-          - "*"
-      - Effect: "Allow"
-        Action:
-          - dynamodb:BatchGetItem
-          - dynamodb:BatchWriteItem
-          - dynamodb:DeleteItem
-          - dynamodb:GetItem
-          - dynamodb:PutItem
-          - dynamodb:Query
-          - dynamodb:Scan
-          - dynamodb:UpdateItem
-        Resource:
-          - !GetAtt UserTable.Arn
-
-  autoConfirmUser:
-    handler: packages/api/functions/cognito/auto-confirm-user.handler
-
-  postAuthN:
-    handler: packages/api/functions/cognito/post-authentication.handler
-    iamRoleStatements:
-      - Effect: "Allow"
-        Action:
-          - dynamodb:GetItem
-          - dynamodb:PutItem
-        Resource:
-          - !GetAtt UserTable.Arn
+functions: ${{file(templates/functions.yml)}}
     
 resources:
-  Conditions:
-    IsApiCustomDomainEnabled:
-      !Equals
-        - ${{self:custom.customDomain.enabled}}
-        - true
-  
-  Resources:
-    AcmCertificate:
-      Type: AWS::CertificateManager::Certificate
-      Condition: IsApiCustomDomainEnabled
-      Properties:
-        DomainName: ${{self:custom.customDomain.domainName}}
-        DomainValidationOptions:
-          - DomainName: ${{self:custom.customDomain.domainName}}
-            ValidationDomain: ${{self:custom.stageConfig.api.validationDomain, ''}}
-
-    UserTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        BillingMode: PAY_PER_REQUEST
-        PointInTimeRecoverySpecification:
-          PointInTimeRecoveryEnabled: false
-        KeySchema:
-          - KeyType: HASH
-            AttributeName: id
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-
-    CognitoUserPool:
-      Type: AWS::Cognito::UserPool
-      Properties:
-        Policies:
-          PasswordPolicy:
-            MinimumLength: 6
-        Schema:
-          - AttributeDataType: String
-            Name: email
-            Required: true
-        AutoVerifiedAttributes:
-          - email
-        # EmailConfiguration:
-        #   EmailSendingAccount: DEVELOPER
-        #   ReplyToEmailAddress: no-reply@halfstack.software
-        #   SourceArn: arn:aws:ses:us-west-2:xxxx:identity/no-reply@halfstack.software
-        LambdaConfig:
-          PreSignUp: !GetAtt AutoConfirmUserLambdaFunction.Arn
-          PostAuthentication: !GetAtt PostAuthNLambdaFunction.Arn
-
-    CognitoUserPoolClient:
-      Type: AWS::Cognito::UserPoolClient
-      Properties:
-        UserPoolId: !Ref CognitoUserPool
-        ClientName: CognitoIdentityPool
-        GenerateSecret: false
-        RefreshTokenValidity: 30
-
-    CognitoIdentityPool:
-      Type: AWS::Cognito::IdentityPool
-      Properties:
-        AllowUnauthenticatedIdentities: false
-        # SupportedLoginProviders:
-        #   graph.facebook.com: 'xxxxx'
-        #   accounts.google.com: 'xxxxx-v02jjpd5r9ig0pdacbhpill2asuqtvnf.apps.googleusercontent.com'
-        #   api.twitter.com:
-        CognitoIdentityProviders:
-          - ClientId: !Ref CognitoUserPoolClient
-            ProviderName: !GetAtt CognitoUserPool.ProviderName
-
-    # Allow Cognito to invoke the cognitoAutoConfirm and cognitoPostAuthN functions
-    AutoConfirmUserLambdaCognitoPermission:
-      Type: AWS::Lambda::Permission
-      Properties:
-        Action: lambda:InvokeFunction
-        FunctionName: !GetAtt AutoConfirmUserLambdaFunction.Arn
-        Principal: cognito-idp.amazonaws.com
-        SourceArn: !GetAtt CognitoUserPool.Arn
-
-    PostAuthNLambdaCognitoPermission:
-      Type: AWS::Lambda::Permission
-      Properties:
-        Action: lambda:InvokeFunction
-        FunctionName: !GetAtt PostAuthNLambdaFunction.Arn
-        Principal: cognito-idp.amazonaws.com
-        SourceArn: !GetAtt CognitoUserPool.Arn
-
-    CognitoUserRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            # Allow authenticated users to assume this role
-            - Effect: Allow
-              Principal:
-                Federated: cognito-identity.amazonaws.com
-              Action: sts:AssumeRoleWithWebIdentity
-              Condition:
-                StringEquals:
-                  'cognito-identity.amazonaws.com:aud': !Ref CognitoIdentityPool
-                'ForAnyValue:StringLike':
-                  'cognito-identity.amazonaws.com:amr': authenticated
-        # Authenticated users are allowed to invoke the API
-        Policies:
-          - PolicyName: InvokeApi
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - execute-api:Invoke
-                  Resource: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/${{self:provider.stage}}/*/*'
-        Path: '/'
-
-    CognitoIdentityPoolRoles:
-      Type: AWS::Cognito::IdentityPoolRoleAttachment
-      Properties:
-        IdentityPoolId: !Ref CognitoIdentityPool
-        Roles:
-          authenticated: !GetAtt CognitoUserRole.Arn
-    
-    # Due to a Serverless Framework bug, we need to create our own Authorizer, instead of
-    # simply specifying `authorizer.arn: !GetAtt CognitoUserPool.Arn` in the function.
-    # https://github.com/serverless/serverless/issues/3212#issuecomment-450574093
-    ApiGatewayAuthorizer:
-      DependsOn:
-        - ApiGatewayRestApi
-      Type: AWS::ApiGateway::Authorizer
-      Properties:
-        Name: CognitoAuthorizer
-        IdentitySource: method.request.header.Authorization
-        RestApiId:
-          Ref: ApiGatewayRestApi
-        Type: COGNITO_USER_POOLS
-        ProviderARNs:
-          - !GetAtt CognitoUserPool.Arn
-  Outputs:
-    CognitoUserPoolId:
-      Description: ID of the Cognito User Pool
-      Value: !Ref CognitoUserPool
-
-    CognitoUserPoolClientId:
-      Description: 'Client ID of the Cognito User Pool App: Identity Pool'
-      Value: !Ref CognitoUserPoolClient
-
-    CognitoIdentityPoolId:
-      Description: ID of the Cognito Identity Pool
-      Value: !Ref CognitoIdentityPool
-
-    UserTableName:
-      Value: !Ref UserTable
-
-    ApiEndpoint:
-      Value: !Sub https://${ApiGatewayRestApi}.execute-api.${AWS::Region}.amazonaws.com/${{self:provider.stage}}
+  - ${{file(templates/resources.yml)}}
+  - ${{file(templates/dynamodb.yml)}}
