--- a/templates/functions.yml
+++ b/templates/functions.yml
@@ -1,3 +1,18 @@
 getDisease:
   name: ${{self:provider.stage}}-getDisease
   handler: packages/graphql/resolvers/getDisease.handler
+
+autoConfirmUser:
+  handler: packages/api/functions/cognito/auto-confirm-user.handler
+  memorySize: 128
+
+postAuthN:
+  handler: packages/api/functions/cognito/post-authentication.handler
+  memorySize: 128
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+      Resource:
+        - !GetAtt UserTable.Arn
