--- a/.github/workflows/on-push-to-master.yaml
+++ b/.github/workflows/on-push-to-master.yaml
@@ -22,9 +22,8 @@ jobs:
     
     - name: Install package
       run: |
-        (npm ci && npm audit --audit-level high && npm test) & \
-        (cd packages/ui && npm ci && npm audit --audit-level high && npm test) & \
-        (cd packages/api && npm ci && npm audit --audit-level high && npm test)
+        (npm ci && npm audit --audit-level critical && npm test) & \
+        (cd packages/ui && npm ci && npm audit --audit-level critical && npm test)
 
     - name: Deploy to staging
       run: |
