refactor: revert back to functionName instead of lambdaFunctionArn for getDisease in templates/graphql.yml

--- a/templates/graphql.yml
+++ b/templates/graphql.yml
@@ -53,4 +53,4 @@ dataSources:
   - type: AWS_LAMBDA
     name: getDisease
     config:
-      lambdaFunctionArn: { Fn::GetAtt: [GetDiseaseLambdaFunction, Arn] }
+      functionName: getDisease
