fix: fix deploy (#26)
* fix: fix deploy

* ci: add debug logs to CI

* fix: remove hardcoded resource names

* fix: update serverless-amplify-plugin

* fix: fix Amplify + Next

* ci: remove debug step

* refactor: revert back to functionName instead of lambdaFunctionArn for getDisease in templates/graphql.yml

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "npm i && cd packages/api && npm i && cd ../ui && npm i",
     "start:ui": "cd packages/ui && npm start",
     "start:ui:offline": "REACT_APP_ApiEndpoint=http://localhost:4911 npm run start:ui",
     "start:api": "sls offline cloudside",
@@ -19,21 +20,19 @@
     "deploy-prepack:prod": "NODE_ENV=production sls deploy --package .serverless --stage production",
     "deploy:prod": "NODE_ENV=production sls deploy --stage production",
     "remove-stack:dev": "sls remove --stage development",
-    "zip-release": "zip -r release.zip .serverless serverless.yaml package.json package-lock.json",
-    "setup": "node scripts/setup/setup.js",
-    "setup-file": "node scripts/setup/createSetupFile.js"
+    "zip-release": "zip -r release.zip .serverless serverless.yaml package.json package-lock.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@brettstack/serverless-amplify-plugin": "^1.7.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.5",
     "@semantic-release/npm": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "@wizeline/serverless-amplify-plugin": "^1.6.2",
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -42,17 +41,16 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "nodemon": "^2.0.3",
     "semantic-release": "^17.3.0",
-    "serverless": "^2.18.0",
+    "serverless": "^2.19.0",
     "serverless-apigateway-service-proxy": "^1.7.0",
     "serverless-appsync-simulator": "^0.11.0",
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-domain-manager": "^3.3.2",
     "serverless-dotenv-plugin": "^2.4.2",
     "serverless-dynamodb-local": "^0.2.39",
-    "serverless-iam-roles-per-function": "^2.0.2",
+    "serverless-iam-roles-per-function": "^3.1.0",
     "serverless-offline": "^6.1.5",
     "serverless-plugin-aws-alerts": "^1.4.0",
-    "serverless-plugin-split-stacks": "^1.9.3",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-prune-plugin": "^1.4.2",
     "serverless-stack-output": "^0.2.3",
