--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Install package
       run: |
-        (npm ci && npm audit --audit-level high && npm test) & \
-        (cd packages/ui && npm ci && npm audit --audit-level high && npm test)
+        (npm ci && npm audit --audit-level critical && npm test) & \
+        (cd packages/ui && npm ci && npm audit --audit-level critical && npm test)
 
     - name: Deploy to sandboxed stack
       id: deploy_to_sandboxed_stack
@@ -46,7 +46,7 @@ jobs:
 
         # Just testing the AWS Creds 
         aws --debug --profile rarecamp_dev cloudformation list-stacks
-        AWS_PROFILE=rarecamp_dev NODE_ENV=production ALARMS_NOTIFICATION_EMAIL=alert@example.com SERVERLESS_SERVICE_SUFFIX=-${{ github.head_ref }} npm run deploy:dev
+        AWS_PROFILE=rarecamp_dev NODE_ENV=production ALARMS_NOTIFICATION_EMAIL=alert@example.com SERVERLESS_SERVICE_SUFFIX=-${{ github.event.number }} npm run deploy:dev
         WEBSITE_URL=https://$(grep -o 'DefaultDomain": "[^"]*' ./stack-outputs.json | grep -o '[^"]*$')
         echo "::set-output name=websiteUrl::$WEBSITE_URL"
     
