--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SERVERLESS_SERVICE_SUFFIX=<your github username goes here>
+SERVERLESS_SERVICE_SUFFIX=
 ALARMS_NOTIFICATION_EMAIL=alert@example.com
 NODE_ENV=production
 AWS_PROFILE=rarecamp_dev
