--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
