fix(ui): fix typescript errors

--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -4,7 +4,8 @@ on:
   pull_request
 
 jobs:
-  auto-merge:
+  auto-merge-dependabot:
+    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
