--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "semantic-release": "^17.3.0",
     "serverless": "^2.19.0",
     "serverless-apigateway-service-proxy": "^1.7.0",
-    "serverless-appsync-simulator": "^0.11.0",
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-domain-manager": "^3.3.2",
     "serverless-dotenv-plugin": "^2.4.2",
@@ -59,13 +58,11 @@
     "webpack": "^4.44.2"
   },
   "dependencies": {
-    "@vendia/serverless-express": "^3.4.0",
+    "@vendia/serverless-express": "^4.3.1",
     "archiver": "^5.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dynamodb-toolbox": "^0.3.0",
-    "express": "^4.17.1",
-    "replace-in-file": "^6.0.0",
-    "serverless-appsync-plugin": "^1.6.0"
+    "express": "^4.17.1"
   }
 }
